	  of 1 now indicates that thick and thin vegetation regions equally
	  likely to be in contact with the clear-air region, rather than
	  that only the thick region is in contact with clear-air
	- Modified the test/rami5/scene_nc files to use the new definition
	  of veg_contact_fraction and a consistent definition of veg_scale
	  to the code

version 0.7.2 (4 October 2021)
	- Longwave urban modifications to give correct emission from
	  walls, fixing error most noticeable with 2-streams - see
	  radtool_legendre_gauss.F90 and radsurf_urban_lw.F90
	- Added test/simple/test_noscat_in.nc test case
	- Added test/simple/test_simple_1stream_out.nc target
	- Added ground-level fluxes into a vertical plane
	  (ground_flux_vertical_diffuse_sw and ground_flux_vertical_lw)
	  needed to compute mean radiant temperature and comfort indices
	- Namelist variable "do_save_flux_profile" saves additional flux
	  profile variables
	- Fixed radsurf_overlap and radsurf_urban_lw to treat overhanging
	  buildings: no radiation is allowed to enter the base of the
	  overhanging layer
	- Store sunlit fractions on ground, roof and walls, along with
	  direct radiation incident on these facets
	- Store fraction of the one-sided leaf area that is in direct
	  sunlight, and the direct radiation absorbed by leaves
	- Fix behaviour when regions have zero area (either no vegetation
	  or no clear-air region): exchange coefficients to/from such
	  regions are now zero, and eigenvalues only computed for regions of
	  finite size
	- Added solar_zenith_angle to driver namelist to specify in
	  degrees as an alternative to cos_solar_zenith_angle
	- Added RAMI-V test scenes in test/rami5

version 0.7.1 (23 October 2020)
	- Added Apache license statement to each source file
	- Fixed behaviour when vegetation or building fraction are zero in
	  a layer, and added two new cases in test/simple to check

version 0.4 (19 December 2019)
	- Fixed calc_matrices_[lw|sw] using eigenvalue decomposition